syntax = "proto3";

package helloworld;
option go_package = "github.com/praneshragu/grpc/helloworldpb";


service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloManyTimes (HelloRequest) returns (stream HelloReply);
  rpc LongGreet (stream HelloRequest) returns (HelloReply);
  rpc GreetEveryone (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
